--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.5.0",
+    "react-qr-code": "^2.0.11"
   }
 }
