--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "18.2.0",
-    "recharts": "^2.5.0",
-    "react-qr-code": "^2.0.11"
+    "react-dom": "18.2.0"
   }
 }
