--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
+    "dotenv": "^16.0.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
