--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-qr-code": "^2.0.11"
+    "react-qr-code": "^2.0.11",
+    "vercel": "^28.18.3"
   }
 }
