--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-qr-code": "^2.0.11",
-    "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3",
-    "typescript": "5.0.3",
-    "@chakra-ui/icons": "^2.0.17",
-    "@chakra-ui/react": "^2.4.9",
-    "dotenv": "^16.0.3"
+    "react-toastify": "^9.1.2",
+    "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
