--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ToastProvider.js", "hooks/useFetchRepos.js", "src/components/Repos/Personals.js", "src/components/Repos/RepoCard.js", "src/components/Repos/Collabs.js", "src/pages/api/signup.js", "src/components/Auth/AuthContext.js", "src/components/Navbar.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ToastProvider.js", "src/components/Repos/Personals.js", "src/components/Repos/RepoCard.js", "src/components/Repos/Collabs.js", "src/pages/api/signup.js", "src/components/Navbar.js", "src/pages/projects/[name].js", "src/pages/api/signin.js"],
   "exclude": ["node_modules"]
 }
