--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ToastProvider.js", "src/components/Repos/Personals.js", "src/components/Repos/RepoCard.js", "src/components/Repos/Collabs.js", "src/pages/api/signup.ts", "src/components/Navbar.tsx", "src/pages/projects/[name].js", "src/pages/api/signin.ts", "src/components/Repos/TopicNames.js", "src/components/Repos/DeleteRepoForm.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ToastProvider.js", "src/components/Repos/Personals.js", "src/components/Repos/RepoCard.js", "src/components/Repos/Collabs.js", "src/pages/api/signup.ts", "src/components/Navbar.tsx", "src/pages/projects/[name].js", "src/pages/api/signin.ts", "src/components/Repos/TopicNames.js", "src/components/Repos/DeleteRepoForm.js", "hooks/useFetchRepos.jsx"],
   "exclude": ["node_modules"]
 }
